--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -93,7 +93,7 @@
         </div>
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <img src="img/ps.png" alt="#" class="img-responsive center-block" width="200" height="200">
+            <img src="{% static 'img/ps.png' %}" alt="#" class="img-responsive center-block" width="200" height="200">
           </div>
         </div>
       </div>
@@ -111,21 +111,21 @@
         <div class="container" >
                 <div class="col-md-4 col-sm-4 col-xs-12 anima scale-in ">
                     <article class="text-center">
-                      <img src="img/demo1.jpg" alt="#" class="zoom-img img-responsive center-block">
+                      <img src="{% static 'img/demo1.jpg' %}" alt="#" class="zoom-img img-responsive center-block">
                         <h3>​ORGANISED LAYERS</h3>
                         <p>Nodal point courier towards decay dome advert wonton soup chrome voodoo.</p>
                     </article>
                 </div>
           <div class="col-md-4 col-sm-4 col-xs-12 anima scale-in d1">
                     <article class="text-center">
-              <img src="img/demo2.jpg" alt="#" class="zoom-img img-responsive center-block">
+              <img src="{% static 'img/demo2.jpg' %}" alt="#" class="zoom-img img-responsive center-block">
                         <h3>​SMART OBJECT</h3>
                         <p>Table plastic concrete silent nano-dome industrial grade. Hotdog marketing.</p>
                     </article>
                 </div>
           <div class="col-md-4 col-sm-4 col-xs-12 anima scale-in d2">
                     <article class="text-center">
-              <img src="img/demo3.jpg" alt="#" class="zoom-img img-responsive center-block">
+              <img src="{% static 'img/demo3.jpg' %}" alt="#" class="zoom-img img-responsive center-block">
                         <h3>TRANSPARENT BG</h3>
                         <p>Grenade wonton soup faded disposable dome cardboard spook refrigerator dolphin.</p>
                     </article>
@@ -255,7 +255,7 @@
                         <a class="close-modal" href="#" data-dismiss="modal">
                             <span class="menu-icon"></span>
                         </a>
-                        <img src="img/cup1.jpg" alt="" class="img-responsive">
+                        <img src="{% static 'img/cup1.jpg' %}" alt="" class="img-responsive">
                     </div>
                     <div class="modal-body">
                         <h3 class="text-center"><b>PaperCup - Mockup </b>($5,00)</h3>
