Change img source path

--- a/shop/static/app/views/home.html
+++ b/shop/static/app/views/home.html
@@ -9,8 +9,8 @@
         	</div>
         	<div class="arrows">
         		<a href="" ng-click="prev()">
-              <img src="static/app/img/left-arrow.png"/></a> <a href="" ng-click="next()">
-              <img src="static/app/img/right-arrow.png"/></a>
+              <img src="static/img/left-arrow.png"/></a> <a href="" ng-click="next()">
+              <img src="static/img/right-arrow.png"/></a>
         	</div>
         </div>
       </div>
